fixed margin-right spacing to be on new class .card-container in template.comp.html

--- a/src/app/template/template.component.scss
+++ b/src/app/template/template.component.scss
@@ -10,10 +10,10 @@
 	height: 100%;
 }
 
-app-day-card {
+.card-container {
 	margin-right: 20px;
 }
 
-app-day-card:last-child {
+.card-container:last-child {
 	margin-right: 0;
 }
